scrollbar design fix

--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -81,18 +81,18 @@ header#header-frame {
     &::-webkit-scrollbar-track
     {
       border: 1px solid black;
-      background-color: rgb(26, 26, 26);
+      background-color: rgb(0, 0, 0);
     }
     
     &::-webkit-scrollbar
     {
       width: 10px;
-      background-color: rgb(26, 26, 26);
+      background-color: rgb(27, 27, 27);
     }
     
     &::-webkit-scrollbar-thumb
     {
-      background-color: #000000;	
+      background-color: #505050;	
     }
 
   }
